# orderbook-aggregator-ui

./: README.md  index.html  package-lock.json  package.json
.trunk/: trunk.yaml
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Orderbook.svelte
