[package]
name = "orderbook-aggregator-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
orderbook-aggregator = { "path" = "../../orderbook-aggregator" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.1", features = ["api-all"] }
tokio-stream = "0.1.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
